force-app/main/default/objects/leaseworks__Change_History__c/leaseworks__Change_History__c.object-meta.xml
<CustomObject>
    <description>History of in service removals or shop visits</description>
    <label>Z_Unused_NotDeletable Change History</label>
    <nameField>
        <displayFormat>CE-{0}</displayFormat>
        <label>Z_Unused_NotDeletable Change Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>