force-app/main/default/objects/leaseworks__Change_History__c/fields/leaseworks__Concession__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked = Yes</inlineHelpText>
    <label>Concession?</label>
    <type>Checkbox</type>
</CustomField>