force-app/main/default/objects/leaseworks__Change_History__c/fields/leaseworks__CSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN__c</fullName>
    <description>Cycles Since New</description>
    <label>CSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>