force-app/main/default/objects/leaseworks__Change_History__c/fields/leaseworks__Part_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Part_Number__c</fullName>
    <description>New Part Number</description>
    <inlineHelpText>New Part Number</inlineHelpText>
    <label>Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>